crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__abbr_tag.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
expression: qmd
---
# Abbr Test

## Description

 The HTML and Rd formats are supported.
