crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_grid_table_label_with_backticks.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
assertion_line: 1279
expression: qmd
---
# Test

## Arguments

+---------------+------------------------------------------------------+
| Argument      | Description                                          |
+===============+======================================================+
| `` `a` ``     | A non-syntactic argument name with single backticks. |
+---------------+------------------------------------------------------+
| ``` ``b`` ``` | A label with a double-backtick run.                  |
+---------------+------------------------------------------------------+
