crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_grid_table_simple_snapshot.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
expression: qmd
---
# Test Function

## Arguments

+----------+-------------------------------------+
| Argument | Description                         |
+==========+=====================================+
| `x`      | A simple description.               |
+----------+-------------------------------------+
| `data`   | Input data. Use `NULL` for default. |
+----------+-------------------------------------+
