crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_grid_table_with_lifecycle_badge_snapshot.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
expression: qmd
---
# Test Function

## Arguments

+-----------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
| Argument        | Description                                                                                                                                     |
+=================+=================================================================================================================================================+
| `engine`        | The engine name. One of:                                                                                                                        |
|                 |                                                                                                                                                 |
|                 | - `"streaming"`: [![[Experimental]](lifecycle-experimental.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental) Use streaming.  |
+-----------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
| `type_coercion` | [![[Deprecated]](lifecycle-deprecated.svg)](https://lifecycle.r-lib.org/articles/stages.html#deprecated) Use a flag instead.                    |
+-----------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
