crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_grid_table_with_list_snapshot.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
expression: qmd
---
# Test Function

## Arguments

+----------+-------------------------------------+
| Argument | Description                         |
+==========+=====================================+
| `x`      | A simple description.               |
+----------+-------------------------------------+
| `opts`   | A named list of options:            |
|          |                                     |
|          | - option A                          |
|          | - option B                          |
|          | - option C                          |
+----------+-------------------------------------+
| `data`   | Input data. Use `NULL` for default. |
+----------+-------------------------------------+
