crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_grid_table_with_preformatted.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
assertion_line: 1303
expression: qmd
---
# Test

## Arguments

+----------+-------------------------+
| Argument | Description             |
+==========+=========================+
| `x`      | Example usage:          |
|          |                         |
|          | ```                     |
|          | `my var` <- foo(x)      |
|          | result <- bar(`my var`) |
|          | ```                     |
+----------+-------------------------+
