crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_list_basic.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
expression: qmd
---
# Test

## Arguments

- **`x`**

  The first argument.

- **`y`**

  The second argument, defaults to 1.
