crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_list_item_with_multi_paragraph.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
expression: qmd
---
# Test

## Arguments

- **`x`**

  Options: 

  - First paragraph.

    Second paragraph of this item.
  - Another item.
