crates/rd2qmd-core/src/convert/snapshots/rd2qmd_core__convert__tests__arguments_list_list_only_description.snap
---
source: crates/rd2qmd-core/src/convert/tests.rs
expression: qmd
---
# Test

## Arguments

- **`method`**

  - `"a"`: Use method A. 
  - `"b"`: Use method B.
